Fix header alignments.

--- a/css/src/_header.scss
+++ b/css/src/_header.scss
@@ -64,7 +64,7 @@ header {
 		}
 
 		@include respond-to( $menu-bp-large ) {
-			left: 175px;
+			right: 175px;
 		}
 
 		button {
